# snaptidy

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  GITHUB_ACTIONS.md  LICENSE  README-ko.md  README.md  build-windows.bat  build-windows.ps1  gui.py  main.py  pyproject.toml  requirements.txt  snaptidy-cli-macos.spec  snaptidy-cli-windows.spec  snaptidy-gui-macos.spec  snaptidy-gui-windows.spec  snaptidy.spec
.github/workflows/: build.yml  manual-build.yml  simple-build.yml
core/: __init__.py  dedup.py  flatten.py  gui.py  organize.py  utils.py
gui/: __init__.py  main.py
gui/widgets/: __init__.py  folder_selector.py  progress_widget.py  settings_panel.py
snaptidy/: __init__.py  cli.py  dedup.py  flatten.py  main.py  organize.py  pyproject.toml  utils.py
snaptidy/snaptidy/: __init__.py  cli.py  dedup.py  flatten.py  organize.py  utils.py
tests/: test_dedup.py  test_flatten.py  test_organize.py
