[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snaptidy"
version = "0.1.0b1"
authors = [
    {name = "Yongsok Kwon", email = "saisiot.dev@gmail.com"},
]
description = "A powerful CLI and GUI tool for organizing photo libraries and removing duplicates"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = ["photo", "organization", "deduplication", "file-management", "gui", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
dependencies = [
    "pillow>=9.0.0",
    "imagehash>=4.3.0",
    "exifread>=3.0.0",
    "hachoir>=3.1.3",
    "opencv-python>=4.5.0",
    "rich>=12.0.0",
    "PyQt6>=6.0.0",
]

[project.urls]
"Homepage" = "https://github.com/saisiot/snaptidy"
"Bug Tracker" = "https://github.com/saisiot/snaptidy/issues"
"Documentation" = "https://github.com/saisiot/snaptidy#readme"
"Source Code" = "https://github.com/saisiot/snaptidy"

[project.scripts]
snaptidy = "snaptidy.snaptidy.cli:main"
snaptidy-gui = "gui.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["snaptidy*", "gui*"]
